refactor: remove public identifier from test files